corrected menu when collapsed 	modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
   margin: auto;
 }
 
+.custom-toggler.navbar-toggler {
+  border-color: #b3857d;
+} 
+
 .nav-item.active > .nav-link {
   text-decoration: underline;
 }
@@ -24,17 +28,21 @@
 
 .navbar-nav .nav-item.active .nav-link{
   color: #b3857d;
-}a
+}
+
 .navbar-nav .nav-link:hover{
   color: #b3857d;
   opacity: 0.8;
 }
 
-header .nav-item:not(:last-child) > .nav-link::after {
+@media (min-width:992px) {header .nav-item:not(:last-child) > .nav-link::after {
   content: "";
   margin-left: 20px;
   border-right: 1px solid #b3857d;
 }
+}
+
+
 
 #nav {
   background-color: #280003;
